--- a/Designer/Interface/Project/Project.xaml
+++ b/Designer/Interface/Project/Project.xaml
@@ -43,24 +43,26 @@
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<Label Content="Project Generation" FontSize="12pt" Margin="0,5,0,0" />
 		<ToggleButton Content="Enable Documentation Warnings" IsChecked="{Binding Path=Settings.EnableDocumentationWarnings}" Margin="5" VerticalAlignment="Center" Grid.Column="0" Grid.Row="1" />
-		<Label Content="Serializer:" Height="Auto" HorizontalAlignment="Left" Margin="0,4,0,0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
-		<ComboBox SelectedIndex="{Binding Path=Settings.ServiceSerializer, Converter={StaticResource ProjectServiceSerializerTypeConverter}}" Grid.Column="1" Grid.Row="1" Height="23" Margin="75,5,5,5" VerticalContentAlignment="Center" >
+		<ToggleButton Content="Generate Regions" IsChecked="{Binding Path=Settings.GenerateRegions}" Margin="5" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1" />
+		<ToggleButton Content="Generate Using Statements Inside Namespace" IsChecked="{Binding Path=Settings.UsingInsideNamespace}" Margin="5" VerticalAlignment="Center" Grid.Column="2" Grid.Row="1" />
+		<Label Content="Serializer:" Height="Auto" HorizontalAlignment="Left" Margin="0,4,0,0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="2" />
+		<ComboBox SelectedIndex="{Binding Path=Settings.ServiceSerializer, Converter={StaticResource ProjectServiceSerializerTypeConverter}}" Grid.Column="0" Grid.Row="2" Height="23" Margin="75,5,5,5" VerticalContentAlignment="Center" >
 			<ComboBox.Items>
 				<ComboBoxItem>Auto</ComboBoxItem>
 				<ComboBoxItem>Data Contract</ComboBoxItem>
 				<ComboBoxItem>XML</ComboBoxItem>
 			</ComboBox.Items>
 		</ComboBox>
-		<CheckBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" Margin="5" Content="Enable EntityFramework 6" IsChecked="{Binding Path=Settings.EnableEntityFramework}" />
-		<pc:TextBox Text="{Binding Path=Settings.EnitityDatabaseType, UpdateSourceTrigger=PropertyChanged}" x:Name="EntityName" Grid.Row="1" Grid.Column="3" Margin="5,5,5,5" IsEnabled="{Binding Path=Settings.EnableEntityFramework}" LabelText="Entity Database Context Type" />
+		<CheckBox Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Margin="5" Content="Enable EntityFramework 6" IsChecked="{Binding Path=Settings.EnableEntityFramework}" />
+		<pc:TextBox Text="{Binding Path=Settings.EnitityDatabaseType, UpdateSourceTrigger=PropertyChanged}" x:Name="EntityName" Grid.Row="21" Grid.Column="2" Margin="5,5,5,5" IsEnabled="{Binding Path=Settings.EnableEntityFramework}" LabelText="Entity Database Context Type" />
 	</Grid>
 	<Grid Grid.Column="0" Grid.Row="4">
 		<Grid.RowDefinitions>
