Added support for REST method preamble code injection.

--- a/Designer/Interface/REST/Method.xaml
+++ b/Designer/Interface/REST/Method.xaml
@@ -190,6 +190,12 @@
 				</ListBox>
 			</Grid>
 		</TabItem>
+		<TabItem Padding="10,5" IsSelected="True">
+			<TabItem.Header>
+				<TextBlock Text="Preamble Code" FontSize="12pt"/>
+			</TabItem.Header>
+			<TextBox Margin="10" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" Text="{Binding Path=MethodData.ClientPreambleCode}" />
+		</TabItem>
 		<TabItem Padding="10,5">
 			<TabItem.Header>
 				<TextBlock Text="Options" FontSize="12pt"/>
