--- a/Designer/Interface/Service/Service.xaml
+++ b/Designer/Interface/Service/Service.xaml
@@ -25,41 +25,47 @@
 					<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 
 					<DataTemplate x:Key="{x:Type Projects:Method}" DataType="{x:Type Projects:Method}">
-						<Grid Name="ItemGrid" >
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*" />
-								<ColumnDefinition Width="Auto" />
-							</Grid.ColumnDefinitions>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="Auto" />
-							</Grid.RowDefinitions>
-							<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
-							<StackPanel Orientation="Vertical" Margin="3">
-								<StackPanel Orientation="Horizontal">
-									<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/Method.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
-									<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+						<Border Background="#01FFFFFF">
+							<Border.ToolTip>
+								<StackPanel Orientation="Vertical">
+									<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" >
+										<TextBlock.Text>
+											<MultiBinding StringFormat="Server: {0} {1}">
+												<Binding Path="ReturnType.TypeName" />
+												<Binding Path="ServerName" />
+											</MultiBinding>
+										</TextBlock.Text>
+									</TextBlock>
+									<TextBlock Visibility="{Binding Path=HasClientType, Converter={StaticResource BoolVisibilityConverter}}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" >
+										<TextBlock.Text>
+											<MultiBinding StringFormat="Client: {0} {1}">
+												<Binding Path="ReturnType.TypeName" />
+												<Binding Path="ClientName" />
+											</MultiBinding>
+										</TextBlock.Text>
+									</TextBlock>
 								</StackPanel>
-								<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
-									<TextBlock.Text>
-										<MultiBinding StringFormat="Server: {0} {1}">
-											<Binding Path="ReturnType.TypeName" />
-											<Binding Path="ServerName" />
-										</MultiBinding>
-									</TextBlock.Text>
-								</TextBlock>
-								<TextBlock Visibility="{Binding Path=HasClientType, Converter={StaticResource BoolVisibilityConverter}}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
-									<TextBlock.Text>
-										<MultiBinding StringFormat="Client: {0} {1}">
-											<Binding Path="ReturnType.TypeName" />
-											<Binding Path="ClientName" />
-										</MultiBinding>
-									</TextBlock.Text>
-								</TextBlock>
-							</StackPanel>
-							<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteOperation_Click">
-								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
-							</Button>
-						</Grid>
+							</Border.ToolTip>
+							<Grid Name="ItemGrid">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="*" />
+									<ColumnDefinition Width="Auto" />
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+								<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
+								<StackPanel Orientation="Vertical" Margin="3">
+									<StackPanel Orientation="Horizontal">
+										<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/Method.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
+										<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+									</StackPanel>
+								</StackPanel>
+								<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteOperation_Click">
+									<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+								</Button>
+							</Grid>
+						</Border>
 						<DataTemplate.Triggers>
 							<MultiDataTrigger>
 								<MultiDataTrigger.Conditions>
@@ -77,41 +83,47 @@
 						</DataTemplate.Triggers>
 					</DataTemplate>
 					<DataTemplate x:Key="{x:Type Projects:Callback}" DataType="{x:Type Projects:Callback}">
-						<Grid Name="ItemGrid" >
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*" />
-								<ColumnDefinition Width="Auto" />
-							</Grid.ColumnDefinitions>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="Auto" />
-							</Grid.RowDefinitions>
-							<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
-							<StackPanel Orientation="Vertical" Margin="3">
-								<StackPanel Orientation="Horizontal">
-									<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/Method.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
-									<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+						<Border Background="#01FFFFFF">
+							<Border.ToolTip>
+								<StackPanel Orientation="Vertical">
+									<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" >
+										<TextBlock.Text>
+											<MultiBinding StringFormat="Server: {0} {1}">
+												<Binding Path="ReturnType.TypeName" />
+												<Binding Path="ServerName" />
+											</MultiBinding>
+										</TextBlock.Text>
+									</TextBlock>
+									<TextBlock Visibility="{Binding Path=HasClientType, Converter={StaticResource BoolVisibilityConverter}}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" >
+										<TextBlock.Text>
+											<MultiBinding StringFormat="Client: {0} {1}">
+												<Binding Path="ReturnType.TypeName" />
+												<Binding Path="ClientName" />
+											</MultiBinding>
+										</TextBlock.Text>
+									</TextBlock>
 								</StackPanel>
-								<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
-									<TextBlock.Text>
-										<MultiBinding StringFormat="Server: {0} {1}">
-											<Binding Path="ReturnType.TypeName" />
-											<Binding Path="ServerName" />
-										</MultiBinding>
-									</TextBlock.Text>
-								</TextBlock>
-								<TextBlock Visibility="{Binding Path=HasClientType, Converter={StaticResource BoolVisibilityConverter}}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
-									<TextBlock.Text>
-										<MultiBinding StringFormat="Client: {0} {1}">
-											<Binding Path="ReturnType.TypeName" />
-											<Binding Path="ClientName" />
-										</MultiBinding>
-									</TextBlock.Text>
-								</TextBlock>
-							</StackPanel>
-							<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteOperation_Click">
-								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
-							</Button>
-						</Grid>
+							</Border.ToolTip>
+							<Grid Name="ItemGrid">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="*" />
+									<ColumnDefinition Width="Auto" />
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+								<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
+								<StackPanel Orientation="Vertical" Margin="3">
+									<StackPanel Orientation="Horizontal">
+										<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/Method.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
+										<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+									</StackPanel>
+								</StackPanel>
+								<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteOperation_Click">
+									<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+								</Button>
+							</Grid>
+						</Border>
 						<DataTemplate.Triggers>
 							<MultiDataTrigger>
 								<MultiDataTrigger.Conditions>
@@ -129,41 +141,47 @@
 						</DataTemplate.Triggers>
 					</DataTemplate>
 					<DataTemplate x:Key="{x:Type Projects:DataChangeMethod}" DataType="{x:Type Projects:DataChangeMethod}">
-						<Grid Name="ItemGrid" >
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*" />
-								<ColumnDefinition Width="Auto" />
-							</Grid.ColumnDefinitions>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="Auto" />
-							</Grid.RowDefinitions>
-							<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
-							<StackPanel Orientation="Vertical" Margin="3">
-								<StackPanel Orientation="Horizontal">
-									<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/DataChangeMethod.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
-									<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+						<Border Background="#01FFFFFF">
+							<Border.ToolTip>
+								<StackPanel Orientation="Vertical">
+									<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" >
+										<TextBlock.Text>
+											<MultiBinding StringFormat="Server: {0} {1}">
+												<Binding Path="ReturnType.TypeName" />
+												<Binding Path="ServerName" />
+											</MultiBinding>
+										</TextBlock.Text>
+									</TextBlock>
+									<TextBlock Visibility="{Binding Path=HasClientType, Converter={StaticResource BoolVisibilityConverter}}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" >
+										<TextBlock.Text>
+											<MultiBinding StringFormat="Client: {0} {1}">
+												<Binding Path="ReturnType.TypeName" />
+												<Binding Path="ClientName" />
+											</MultiBinding>
+										</TextBlock.Text>
+									</TextBlock>
 								</StackPanel>
-								<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
-									<TextBlock.Text>
-										<MultiBinding StringFormat="Server: {0} {1}">
-											<Binding Path="ReturnType.TypeName" />
-											<Binding Path="ServerName" />
-										</MultiBinding>
-									</TextBlock.Text>
-								</TextBlock>
-								<TextBlock Visibility="{Binding Path=HasClientType, Converter={StaticResource BoolVisibilityConverter}}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
-									<TextBlock.Text>
-										<MultiBinding StringFormat="Client: {0} {1}">
-											<Binding Path="ReturnType.TypeName" />
-											<Binding Path="ClientName" />
-										</MultiBinding>
-									</TextBlock.Text>
-								</TextBlock>
-							</StackPanel>
-							<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteOperation_Click">
-								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
-							</Button>
-						</Grid>
+							</Border.ToolTip>
+							<Grid Name="ItemGrid">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="*" />
+									<ColumnDefinition Width="Auto" />
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+								<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
+								<StackPanel Orientation="Vertical" Margin="3">
+									<StackPanel Orientation="Horizontal">
+										<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/DataChangeMethod.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
+										<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+									</StackPanel>
+								</StackPanel>
+								<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteOperation_Click">
+									<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+								</Button>
+							</Grid>
+						</Border>
 						<DataTemplate.Triggers>
 							<MultiDataTrigger>
 								<MultiDataTrigger.Conditions>
@@ -181,33 +199,39 @@
 						</DataTemplate.Triggers>
 					</DataTemplate>
 					<DataTemplate x:Key="{x:Type Projects:Property}" DataType="{x:Type Projects:Property}">
-						<Grid Name="ItemGrid" >
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*" />
-								<ColumnDefinition Width="Auto" />
-							</Grid.ColumnDefinitions>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="Auto" />
-							</Grid.RowDefinitions>
-							<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
-							<StackPanel Orientation="Vertical" Margin="3">
-								<StackPanel Orientation="Horizontal">
-									<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/Property.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
-									<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+						<Border Background="#01FFFFFF">
+							<Border.ToolTip>
+								<StackPanel Orientation="Vertical">
+									<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" >
+										<TextBlock.Text>
+											<MultiBinding StringFormat="Server: {0} {1}">
+												<Binding Path="ReturnType.TypeName" />
+												<Binding Path="ServerName" />
+											</MultiBinding>
+										</TextBlock.Text>
+									</TextBlock>
 								</StackPanel>
-								<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
-									<TextBlock.Text>
-										<MultiBinding StringFormat="Server: {0} {1}">
-											<Binding Path="ReturnType.TypeName" />
-											<Binding Path="ServerName" />
-										</MultiBinding>
-									</TextBlock.Text>
-								</TextBlock>
-							</StackPanel>
-							<Button Grid.Column="1" x:Name="DeleteProperty" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteProperty_Click">
-								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
-							</Button>
-						</Grid>
+							</Border.ToolTip>
+							<Grid Name="ItemGrid">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="*" />
+									<ColumnDefinition Width="Auto" />
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+								<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
+								<StackPanel Orientation="Vertical" Margin="3">
+									<StackPanel Orientation="Horizontal">
+										<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/Property.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
+										<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+									</StackPanel>
+								</StackPanel>
+								<Button Grid.Column="1" x:Name="DeleteProperty" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteProperty_Click">
+									<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+								</Button>
+							</Grid>
+						</Border>
 						<DataTemplate.Triggers>
 							<MultiDataTrigger>
 								<MultiDataTrigger.Conditions>
