--- a/Designer/Interface/REST/HttpClientConfig.xaml
+++ b/Designer/Interface/REST/HttpClientConfig.xaml
@@ -1,22 +1,22 @@
-﻿<Grid x:Class="NETPath.Interface.REST.HttpClientConfig" x:ClassModifier="internal"
+﻿<Grid x:Class="NETPath.Interface.Rest.HttpClientConfig" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
 	xmlns:sf="http://schemas.syncfusion.com/wpf"
-	xmlns:REST="clr-namespace:NETPath.Interface.REST"
+	xmlns:Rest="clr-namespace:NETPath.Interface.Rest"
 	xmlns:Service="clr-namespace:NETPath.Interface.Service"
 	mc:Ignorable="d" d:DesignHeight="750" d:DesignWidth="750" UseLayoutRounding="True" >
 	<Grid.Resources>
-		<REST:AuthenticationLevelConverter x:Key="AuthenticationLevelConverter" />
-		<REST:ClientCertificateOptionConverter x:Key="ClientCertificateOptionConverter" />
-		<REST:CookieContainerModeConverter x:Key="CookieContainerModeConverter" />
-		<REST:CredentialsModeConverter x:Key="CredentialsModeConverter" />
-		<REST:DecompressionMethodsConverter x:Key="DecompressionMethodsConverter" />
-		<REST:ContentModeConverter x:Key="ContentModeConverter" />
-		<REST:RequestCacheLevelConverter x:Key="RequestCacheLevelConverter" />
-		<Service:MethodRESTVerbsConverter x:Key="MethodRESTVerbsConverter" />
+		<Rest:AuthenticationLevelConverter x:Key="AuthenticationLevelConverter" />
+		<Rest:ClientCertificateOptionConverter x:Key="ClientCertificateOptionConverter" />
+		<Rest:CookieContainerModeConverter x:Key="CookieContainerModeConverter" />
+		<Rest:CredentialsModeConverter x:Key="CredentialsModeConverter" />
+		<Rest:DecompressionMethodsConverter x:Key="DecompressionMethodsConverter" />
+		<Rest:ContentModeConverter x:Key="ContentModeConverter" />
+		<Rest:RequestCacheLevelConverter x:Key="RequestCacheLevelConverter" />
+		<Service:MethodRestVerbsConverter x:Key="MethodRestVerbsConverter" />
 		<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 		<pc:NotBoolVisibilityConverter x:Key="NotBoolVisibilityConverter" />
 	</Grid.Resources>
