--- a/Designer/Interface/REST/Method.xaml
+++ b/Designer/Interface/REST/Method.xaml
@@ -1,10 +1,10 @@
-﻿<Grid x:Class="NETPath.Interface.REST.Method" x:ClassModifier="internal"
+﻿<Grid x:Class="NETPath.Interface.Rest.Method" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
 	xmlns:Service="clr-namespace:NETPath.Interface.Service"
-	xmlns:REST="clr-namespace:NETPath.Interface.REST"
+	xmlns:Rest="clr-namespace:NETPath.Interface.Rest"
 	xmlns:Data="clr-namespace:NETPath.Interface.Data"
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
 	xmlns:Docs="clr-namespace:NETPath.Interface.Documentation"
@@ -12,12 +12,12 @@
 	d:DesignHeight="750" d:DesignWidth="750" UseLayoutRounding="True" >
 	<Grid.Resources>
 		<Service:ProtectionLevelConverter x:Key="ProtectionLevelConverter" />
-		<Service:MethodRESTVerbsConverter x:Key="MethodRESTVerbsConverter" />
+		<Service:MethodRestVerbsConverter x:Key="MethodRestVerbsConverter" />
 		<Service:WebMessageBodyStyleConverter x:Key="WebMessageBodyStyleConverter"/>
 		<Service:WebMessageFormatConverter x:Key="WebMessageFormatConverter" />
 		<pc:NotBoolConverter x:Key="NotBoolConverter" />
 		<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
-		<DataTemplate x:Key="RESTHTTPClientConfigurationTemplate" DataType="{x:Type Projects:RESTHTTPClientConfiguration}">
+		<DataTemplate x:Key="RestHTTPClientConfigurationTemplate" DataType="{x:Type Projects:RestHTTPClientConfiguration}">
 			<Grid Name="ItemGrid" >
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="*" />
@@ -35,7 +35,7 @@
 				</StackPanel>
 			</Grid>
 		</DataTemplate>
-		<DataTemplate x:Key="RESTHTTPWebConfigurationTemplate" DataType="{x:Type Projects:RESTHTTPWebConfiguration}">
+		<DataTemplate x:Key="RestHTTPWebConfigurationTemplate" DataType="{x:Type Projects:RestHTTPWebConfiguration}">
 			<Grid Name="ItemGrid" >
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="*" />
@@ -53,7 +53,7 @@
 				</StackPanel>
 			</Grid>
 		</DataTemplate>
-		<REST:RequestConfigurationTemplateSelector x:Key="RequestConfigurationTemplateSelector" WebTemplate="{StaticResource RESTHTTPWebConfigurationTemplate}" ClientTemplate="{StaticResource RESTHTTPClientConfigurationTemplate}" />
+		<Rest:RequestConfigurationTemplateSelector x:Key="RequestConfigurationTemplateSelector" WebTemplate="{StaticResource RestHTTPWebConfigurationTemplate}" ClientTemplate="{StaticResource RestHTTPClientConfigurationTemplate}" />
 		<Style x:Key="{x:Type ComboBoxItem}" TargetType="{x:Type ComboBoxItem}">
 			<Setter Property="SnapsToDevicePixels" Value="true"/>
 			<Setter Property="OverridesDefaultStyle" Value="true"/>
@@ -92,7 +92,7 @@
 	<Label Content="Server Name:" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="100" />
 	<pc:TextBox Text="{Binding Path=MethodData.ServerName}" Name="ServerName" Grid.Column="1" Grid.Row="1" Height="23" Margin="100,5,5,5" ToolTip="{Binding Path=MethodData.ServerName}" />
 	<Label Content="HTTP Verb:" HorizontalAlignment="Left" Margin="0,5" VerticalContentAlignment="Center" VerticalAlignment="Top" Grid.Row="2" Grid.Column="0" />
-	<ComboBox Height="23" Margin="90,5,5,5" SelectedIndex="{Binding Path=MethodData.Method, Converter={StaticResource MethodRESTVerbsConverter}}" VerticalContentAlignment="Center" VerticalAlignment="Top" Grid.Row="2" Grid.Column="0" >
+	<ComboBox Height="23" Margin="90,5,5,5" SelectedIndex="{Binding Path=MethodData.Method, Converter={StaticResource MethodRestVerbsConverter}}" VerticalContentAlignment="Center" VerticalAlignment="Top" Grid.Row="2" Grid.Column="0" >
 		<ComboBoxItem Content="GET" />
 		<ComboBoxItem Content="POST" />
 		<ComboBoxItem Content="PUT" />
@@ -132,7 +132,7 @@
 				<Border Grid.Row="0" x:Name="ProjectBinding" Visibility="Collapsed" DataContext="{Binding Path=ServiceProject}" />
 				<ListBox Grid.Row="1" Name="ValuesList" AllowDrop="True" BorderThickness="0" Background="Transparent" Margin="0" SelectionMode="Single" Padding="-1,0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" VirtualizingStackPanel.IsVirtualizing="False" ItemContainerStyle="{StaticResource StretchedContainerStyle}" PreviewMouseLeftButtonDown="ValuesList_PreviewMouseLeftButtonDown" PreviewMouseMove="ValuesList_PreviewMouseMove" QueryContinueDrag="ValuesList_QueryContinueDrag" DragLeave="ValuesList_DragLeave" PreviewDragOver="ValuesList_PreviewDragOver" PreviewDrop="ValuesList_Drop" >
 					<ListBox.ItemTemplate>
-						<DataTemplate DataType="{x:Type Projects:RESTMethodParameter}">
+						<DataTemplate DataType="{x:Type Projects:RestMethodParameter}">
 							<Border x:Name="BG" IsHitTestVisible="True" Background="#01FFFFFF" Margin="0,10,0,0">
 								<Grid>
 									<Grid.RowDefinitions>
@@ -167,7 +167,7 @@
 											<ColumnDefinition Width="Auto" />
 											<ColumnDefinition Width="2*" />
 										</Grid.ColumnDefinitions>
-										<pc:TextBox Name="OperationParameterRestName" Text="{Binding Path=RestName}" LabelText="REST Name" Margin="0,5,5,5" Grid.Column="0" VerticalContentAlignment="Center" PreviewKeyDown="OperationParameterDocumentation_PreviewKeyDown" ToolTip="{Binding Path=Name}" />
+										<pc:TextBox Name="OperationParameterRestName" Text="{Binding Path=RestName}" LabelText="Rest Name" Margin="0,5,5,5" Grid.Column="0" VerticalContentAlignment="Center" PreviewKeyDown="OperationParameterDocumentation_PreviewKeyDown" ToolTip="{Binding Path=Name}" />
 										<CheckBox Content="Serialize" IsChecked="{Binding Path=Serialize}" Grid.Column="1" Margin="5" IsEnabled="{Binding Path=IsSerializable}" />
 										<CheckBox Content="Path" IsChecked="{Binding Path=IsPath}" Grid.Column="2" Margin="5" IsEnabled="{Binding Path=Serialize, Converter={StaticResource NotBoolConverter}}" />
 										<CheckBox Content="Query" IsChecked="{Binding Path=IsQuery}" Grid.Column="3" Margin="5" IsEnabled="{Binding Path=Serialize, Converter={StaticResource NotBoolConverter}}" />
@@ -229,7 +229,7 @@
 					</ComboBox>
 					<ToggleButton Content="Hidden" IsChecked="{Binding Path=MethodData.IsHidden}" Margin="5" Grid.Column="0" Grid.Row="2" />
 				</Grid>
-				<Label Grid.Row="2" Content="REST" FontSize="12pt" Margin="0,5,0,0" />
+				<Label Grid.Row="2" Content="Rest" FontSize="12pt" Margin="0,5,0,0" />
 				<Grid Grid.Row="3" Margin="0,5,0,0">
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="*"/>
