--- a/Designer/Interface/REST/Service.xaml
+++ b/Designer/Interface/REST/Service.xaml
@@ -1,10 +1,10 @@
-﻿<Grid x:Class="NETPath.Interface.REST.Service" x:ClassModifier="internal"
+﻿<Grid x:Class="NETPath.Interface.Rest.Service" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
 	xmlns:Service="clr-namespace:NETPath.Interface.Service"
-	xmlns:REST="clr-namespace:NETPath.Interface.REST"
+	xmlns:Rest="clr-namespace:NETPath.Interface.Rest"
 	xmlns:Data="clr-namespace:NETPath.Interface.Data"
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
 	xmlns:Docs="clr-namespace:NETPath.Interface.Documentation"
@@ -41,7 +41,7 @@
 					<pc:IntConverter x:Key="IntConverter" />
 					<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 
-					<DataTemplate x:Key="{x:Type Projects:RESTMethod}" DataType="{x:Type Projects:RESTMethod}">
+					<DataTemplate x:Key="{x:Type Projects:RestMethod}" DataType="{x:Type Projects:RestMethod}">
 						<Border Background="#01FFFFFF">
 							<Border.ToolTip>
 								<StackPanel Orientation="Vertical">
@@ -92,7 +92,7 @@
 						</DataTemplate.Triggers>
 					</DataTemplate>
 
-					<DataTemplate x:Key="RESTHTTPClientConfigurationTemplate" DataType="{x:Type Projects:RESTHTTPClientConfiguration}">
+					<DataTemplate x:Key="RestHTTPClientConfigurationTemplate" DataType="{x:Type Projects:RestHTTPClientConfiguration}">
 						<Grid Name="ItemGrid" >
 							<Grid.ColumnDefinitions>
 								<ColumnDefinition Width="*" />
@@ -129,7 +129,7 @@
 						</DataTemplate.Triggers>
 					</DataTemplate>
 
-					<DataTemplate x:Key="RESTHTTPWebConfigurationTemplate" DataType="{x:Type Projects:RESTHTTPWebConfiguration}">
+					<DataTemplate x:Key="RestHTTPWebConfigurationTemplate" DataType="{x:Type Projects:RestHTTPWebConfiguration}">
 						<Grid Name="ItemGrid" >
 							<Grid.ColumnDefinitions>
 								<ColumnDefinition Width="*" />
@@ -165,7 +165,7 @@
 							</DataTrigger>
 						</DataTemplate.Triggers>
 					</DataTemplate>
-					<REST:RequestConfigurationTemplateSelector x:Key="RequestConfigurationTemplateSelector" WebTemplate="{StaticResource RESTHTTPWebConfigurationTemplate}" ClientTemplate="{StaticResource RESTHTTPClientConfigurationTemplate}" />
+					<Rest:RequestConfigurationTemplateSelector x:Key="RequestConfigurationTemplateSelector" WebTemplate="{StaticResource RestHTTPWebConfigurationTemplate}" ClientTemplate="{StaticResource RestHTTPClientConfigurationTemplate}" />
 				</ResourceDictionary>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
